@@ -1,5 +1,8 @@
 2008-11-02  Gabor Csardi  <csardi@szaffi>
 
+	* src/bipartite.c (igraph_get_incidence) : rewritten, previous 
+	implementation was incorrect
+
 	* src/bipartite.c (igraph_get_incidence) : added
 
 2008-11-01  Gabor Csardi  <csardi@szaffi>
